chore: 脱敏凭据、清理过期内容并同步文档
信息安全
- 数据库/Redis 连接、SMTP 授权码、服务器 IP、域名、本机用户名统一脱敏
- application*.yml 默认值改为 localhost + 环境变量注入，不再内置真实凭据
- docker-compose 凭据改由 deploy/.env 注入（缺失即报错），新增 .env.example 模板
- postgresql-init.sql 邮件账号改为占位示例（默认停用）

清理
- 删除过期文档/脚本：QUICKSTART、SATOKEN_GUIDE、MULTI_DATABASE_GUIDE、CLUSTER_QUICKSTART、API_PATH_REVIEW
- 删除根目录重复 sql/、generate-dict-sql 脚本、server-log.txt、nginx.conf
- 取消跟踪构建产物 tsconfig.tsbuildinfo

文档
- README/DEPLOY_GUIDE 更新为环境变量配置方式，补充反馈插件与全端统计
- 修正 CLUSTER_MODE 错别字、STATS_DESIGN 状态、去除 BOM
- .gitignore 补充构建产物、deploy/.env、打包产物